--- a/dispatch/src/main/resources/application.properties
+++ b/dispatch/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dispatch
-spring.kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=localhost:9092
 
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.value.default.type=com.kafka_project.dispatch.message.OrderCreated
+
+
